--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,22 +1,39 @@
-.App {
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+#App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+#App #header {
+  width: 100%;
+  height: 70px;
+  background-color: #3f87c6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#App #header #logo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 70px;
+  position: absolute;
+  left: 25px;
+  top: 25px;
 }
 
-.App-link {
-  color: #09d3ac;
+#App #search {
+  position: relative;
+  top: 44px;
+}
+
+#App #search .headline {
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 28px;
+  color: #4b5050;
 }
