--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -27,6 +27,8 @@
   appearance: none;
   border-radius: 0px;
   padding-left: 20px;
+  background: url("https://img.icons8.com/metro/26/000000/expand-arrow.png") 96% /
+    3% no-repeat;
 }
 
 #fields div .text-input::placeholder,
@@ -46,24 +48,13 @@
   font-size: 10px;
 }
 
-#fields #repo-license:after {
-  font-family: FontAwesome;
-  content: "\f107";
-  font-size: 15px;
-  position: relative;
-  top: 2px;
-  right: 15px;
-  color: #4b5050;
-  pointer-events: none;
-}
-
 /* Custom checkbox for 'include forked' styling starts here */
 #fields #repo-forked {
   display: block;
   position: relative;
   margin-left: 40px;
   padding-top: 5px;
-  margin-top: -10px;
+  margin-top: 8px;
   font-size: 14px;
   user-select: none;
 }
@@ -121,7 +112,7 @@
 
 #fields #button {
   position: relative;
-  margin-top: 25px;
+  margin-top: 30px;
   font-weight: bold;
   text-transform: uppercase;
   color: #fff;
