--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,6 +1,7 @@
 #fields {
   position: relative;
   top: 50px;
+  margin-bottom: 40px;
 }
 
 #fields form {
@@ -76,11 +77,6 @@
   cursor: pointer;
 }
 
-/* When the checkbox is checked, add a gray background */
-#fields #repo-forked input:checked ~ #repo-forked-checkmark {
-  background-color: #4b5050;
-}
-
 /* Create the checkmark/indicator (hidden when not checked) */
 #fields #repo-forked #repo-forked-checkmark:after {
   content: "";
@@ -95,15 +91,15 @@
 
 /* Style the checkmark/indicator */
 #fields #repo-forked-checkmark:after {
-  left: 10px;
-  top: 3px;
-  width: 9px;
-  height: 17px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  left: 8px;
+  top: 0px;
+  width: 12px;
+  height: 22px;
+  border: solid #3f87c6;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
 }
 
 #fields #repo-button {
@@ -122,6 +118,7 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  font-size: 10px;
 }
 
 #fields #line {
@@ -129,6 +126,10 @@
   width: 322px;
   height: 1px;
   background-color: #4b5050;
-  margin: 0 auto;
-  top: 40px;
+  margin: 40px 0;
+}
+
+#fields .instructions {
+  color: #4b5050;
+  text-align: center;
 }
