--- a/src/components/Search/Results.css
+++ b/src/components/Search/Results.css
@@ -1,3 +1,15 @@
-/* #App #container-results .results-list {
-	height: 50px;
-} */
+#App #container-results .results-list {
+  height: 50px;
+  margin: 60px 0;
+  padding-left: 12px;
+  height: 220px;
+  border: 1px solid #4b5050;
+  vertical-align: middle;
+  line-height: 50px;
+  font-size: 14px;
+}
+
+#App #container-results .results-list p:first-child {
+  color: #3f87c6;
+  font-weight: bold;
+}
