--- a/src/components/Search/Results.css
+++ b/src/components/Search/Results.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 10px 0;
-  height: 600px;
+  height: 1000px;
   border: 1px solid #4b5050;
   position: relative;
 }
@@ -30,13 +30,13 @@
   position: relative;
 }
 
-#App #container-results .results-list #test {
+#App #container-results .results-list #forked {
   /* display: flex; */
   font-size: 16px;
   color: #fff;
   background-color: #3f87c6;
   /* justify-content: flex-end; */
-  padding: 0px 18px;
+  padding: 0 18px;
   position: absolute;
   right: 12px;
   top: 12px;
@@ -47,7 +47,7 @@
 }
 
 #App #container-results .results-list p:nth-last-child(3) {
-  padding: 5px 0 16px 12px;
+  padding: 4px 0 16px 12px;
 }
 
 #App #container-results .results-list p:nth-last-child(2),
