border color change on invalid

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -59,11 +59,13 @@
 }
 
 #App #container-footer {
+  /* position: relative; */
+  bottom: 5px;
   text-align: center;
-  height: 70px;
+  /* height: 70px; */
   background-color: #3f87c6;
   color: #fff;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
   vertical-align: middle;
   line-height: 70px;
   font-size: 10px;
