--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,17 +1,17 @@
-#fields {
+#container-fields {
   position: relative;
   top: 50px;
 }
 
-#fields form {
+#container-fields form {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   width: 322px;
 }
 
-#fields div .text-input,
-#fields div select {
+#container-fields div .text-input,
+#container-fields div select {
   border: 1px solid #4b5050;
   width: 322px;
   height: 45px;
@@ -19,11 +19,11 @@
   margin-top: 5px;
 }
 
-#fields div .text-input {
+#container-fields div .text-input {
   padding-left: 20px;
 }
 
-#fields div select {
+#container-fields div select {
   cursor: pointer;
   appearance: none;
   border-radius: 0px;
@@ -31,25 +31,25 @@
   background: url("/assets/arrow.png") 96% / 3% no-repeat;
 }
 
-#fields div .text-input::placeholder,
-#fields div select option {
+#container-fields div .text-input::placeholder,
+#container-fields div select option {
   color: #4b5050;
   width: 20px;
   font-size: 12px;
 }
 
-/* #fields div select {
+/* #container-fields div select {
   position: relative;
   left: 5px;
 } */
 
-#fields .fields-label {
+#container-fields form .fields .fields-label {
   color: #4b5050;
   font-size: 10px;
 }
 
 /* Custom checkbox for 'include forked' styling starts here */
-#fields #repo-forked {
+#container-fields #repo-forked {
   display: block;
   position: relative;
   margin-left: 40px;
@@ -60,13 +60,13 @@
 }
 
 /* Hide the browser's default checkbox */
-#fields #repo-forked input {
+#container-fields #repo-forked input {
   position: absolute;
   opacity: 0;
 }
 
 /* Create a custom checkbox */
-#fields #repo-forked #repo-forked-checkmark {
+#container-fields #repo-forked #repo-forked-checkmark {
   position: absolute;
   top: 0;
   margin-left: -40px;
@@ -77,19 +77,19 @@
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
-#fields #repo-forked #repo-forked-checkmark:after {
+#container-fields #repo-forked #repo-forked-checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
 /* Show the checkmark when checked */
-#fields #repo-forked input:checked ~ #repo-forked-checkmark:after {
+#container-fields #repo-forked input:checked ~ #repo-forked-checkmark:after {
   display: block;
 }
 
 /* Style the checkmark/indicator */
-#fields #repo-forked-checkmark:after {
+#container-fields #repo-forked-checkmark:after {
   left: 8px;
   top: 0px;
   width: 12px;
@@ -101,11 +101,11 @@
   transform: rotate(40deg);
 }
 
-#fields #repo-button {
+#container-fields #repo-button {
   margin: 0 auto;
 }
 
-#fields #button {
+#container-fields #button {
   position: relative;
   margin-top: 30px;
   font-weight: bold;
@@ -120,7 +120,7 @@
   font-size: 10px;
 }
 
-#fields #line {
+#container-fields #line {
   position: relative;
   width: 322px;
   height: 1px;
@@ -128,9 +128,56 @@
   margin: 40px 0;
 }
 
-#fields .warning {
+#container-fields .warning {
   position: relative;
   top: -10px;
   color: red;
   font-size: 12px;
+}
+
+@media (min-width: 1920px) {
+  #container-fields {
+    position: relative;
+    top: 50px;
+  }
+
+  #container-fields form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 900px;
+    justify-content: center;
+  }
+  #container-fields form .fields {
+    width: 450px;
+    margin-top: 10px;
+    text-align: center;
+  }
+
+  #container-fields form .fields .fields-label {
+    position: absolute;
+    margin-top: -10px;
+  }
+
+  #container-fields form #repo-forked {
+    width: 345px;
+    margin-top: 20px;
+    margin-left: 105px;
+  }
+
+  #container-fields form .warning {
+    text-align: left;
+    left: 65px;
+  }
+
+  #container-fields form #button {
+    margin: 80px 600px 0 600px;
+    width: 120px;
+  }
+
+  #container-fields form #line {
+    position: relative;
+    width: 1284px;
+    margin: 80px 0;
+  }
 }
