--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -108,6 +108,7 @@
 #container-fields #button {
   position: relative;
   margin-top: 30px;
+  margin-bottom: 50px;
   font-weight: bold;
   text-transform: uppercase;
   color: #fff;
@@ -118,14 +119,6 @@
   border-radius: 3px;
   cursor: pointer;
   font-size: 10px;
-}
-
-#container-fields #line {
-  position: relative;
-  width: 322px;
-  height: 1px;
-  background-color: #4b5050;
-  margin: 40px 0;
 }
 
 #container-fields .warning {
@@ -173,11 +166,5 @@
   #container-fields form #button {
     margin: 80px 600px 0 600px;
     width: 120px;
-  }
-
-  #container-fields form #line {
-    position: relative;
-    width: 1284px;
-    margin: 80px 0;
   }
 }
