--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,13 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   font-family: "Helvetica", "Arial", sans-serif;
-}
-
-#App {
 }
 
 #App #container-header {
@@ -28,15 +23,17 @@
 }
 
 #App #container-search {
-  /* position: relative; */
   margin-top: 44px;
-  /* height: 600px; */
 }
 
 #App #container-search #headline {
   font-size: 28px;
-  color: #4b5050;
+}
+
+#App #container-search #headline,
+#App #container-instructions {
   text-align: center;
+  color: #4b5050;
 }
 
 #App #container-search p span::before,
@@ -46,19 +43,14 @@
 }
 
 #App #container-instructions {
-  color: #4b5050;
-  text-align: center;
   height: 70px;
   margin-top: 40px;
 }
 
 #App #container-results {
-  /* display: flex;
-  flex-direction: column; */
   margin: 50px auto 35px auto;
   color: #4b5050;
   width: 322px;
-  /* height: 100vh; */
 }
 
 #App #container-results > p {
@@ -72,14 +64,9 @@
 }
 
 #App #container-footer {
-  /* position: relative; */
-  /* bottom: 5px; */
   text-align: center;
-  /* margin-top: 20px; */
-  /* height: 70px; */
   background-color: #3f87c6;
   color: #fff;
-  /* margin-bottom: 8px; */
   vertical-align: middle;
   padding: 30px 0;
   font-size: 10px;
