--- a/src/components/Search/Results.css
+++ b/src/components/Search/Results.css
@@ -47,7 +47,7 @@
   padding: 22px 0 22px 12px;
 }
 
-@media (min-width: 1920px) {
+@media only screen and (min-width: 1920px) {
   #App #container-results {
     width: 1284px;
     margin-bottom: 55px;
