--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   margin: 0 auto;
   width: 322px;
-  color: #4b5050;
 }
 
 #App #container-fields form div .text-input,
@@ -18,6 +17,7 @@
   height: 45px;
   margin-bottom: 15px;
   margin-top: 5px;
+  color: #4b5050;
 }
 
 #App #container-fields form div .text-input {
@@ -44,10 +44,11 @@
 
 /* Custom checkbox for 'include forked' styling starts here */
 #App #container-fields form #repo-forked {
+  color: #4b5050;
   display: block;
   position: relative;
   margin-left: 40px;
-  padding-top: 5px;
+  padding-top: 7px;
   margin-top: 8px;
   font-size: 14px;
   user-select: none;
@@ -127,7 +128,7 @@
   font-size: 12px;
 }
 
-@media (min-width: 1920px) {
+@media only screen and (min-width: 1920px) {
   #App #container-fields {
     position: relative;
     top: 50px;
