--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,3 +15,13 @@
     }
   }
 }
+
+@media only screen and (min-width: 1920px) {
+  #App {
+    #container-header {
+      #logo {
+        left: 328px;
+      }
+    }
+  }
+}
